# video_stego

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/video_stego/: __init__.py  cli.py  decode.py  encode.py  utils.py
tests/: test_roundtrip.py
