[project]
name = "video-stego"
version = "0.1.0"
description = "Encoder/decoder LSB dans séquence PNG + repack vidéo (optionnel)"
authors = [{name="Your Name"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["opencv-python>=4.9","numpy>=1.26","click>=8.1"]

[project.scripts]
video-stego = "video_stego.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
